--- a/sales.html
+++ b/sales.html
@@ -1,35 +1,17 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+<h1>Summary of Cookies Needed per Store, per Hour.</h1>
+    <ul id="storeList">
+      <li id="storeLocation"></li>
+    </ul>
 
+  </body>
+  <script src="app.js" type="text/javascript" >
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-First, create a separate JS object literal (no constructor functions... yet) for each shop location that does the following:
-
-Stores the min/max hourly customers, and the average cookies per customer, in object properties
-
-Uses a method of that object to generate a random number of customers per hour. Objects/Math/random
-
-Calculate and store the simulated amounts of cookies purchased for each hour at each location using average cookies purchased and the random number of customers generated
-
-Store the results for each location in a separate array... perhaps as a property of the object representing that location
-
-Display the values of each array as unordered lists in the browser
-
-Calculating the sum of these hourly totals; your output for each location should look like this:
-
-Location	Min / Cust	Max / Cust	Avg Cookie / Sale
-1st and Pike	23	65	6.3
-SeaTac Airport	3	24	1.2
-Seattle Center	11	38	3.7
-Capitol Hill	20	38	2.3
-Alki	2	16	4.6
+  </script>
+</html>
