--- a/index.html
+++ b/index.html
@@ -2,9 +2,49 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/css/style.css" type="text">
     <title>cookie-stand</title>
   </head>
   <body>
-    
+    <h1>Famous Pat's Salmon Cookies</h1>
+    <img src="salmon.png" alt="Salmon cookie">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <h2>What's This Cookie All About?</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <ul>Pat's Other Famous Items Now Available</ul>
+      <li>Salmon Pretzels</li>
+      <li>Salmon Ice Cream</li>
+      <li>Salmon Yougurt</li>
+      <li>Salmon Pie!</li>
+    <aside>Famous Pat's Location</aside>
+      <p>1st & Pike</p>
+      <p>Capitol Hill</p>
+      <p>Seattle Center</p>
+      <p>Akli</p>
+      <p>SeaTac Airport</p>
+    <footer>Famous Pat's Salmon cookies
+      2901 3rd Avenue
+      Seattle WA 98001
+      206.4Salmon (206.472.5666)
+      Call for Seasonal Hours & Special Deals.
+    </footer>
   </body>
 </html>
+
+
+
+
+
+
+
+Besides using the picture of the fish... you should use...
+
+A custom Google font for highlights
+A specified standard san-serif web font for data (such as Arial, Verdana, or Helvetica)
+A specified standard serif web font for text (such as Georgia, Times, etc.)
+Specified different font colors for all three font usages
+A background color for the default page background (make sure font colors have good contrast and are readable on this background)
+A different background color for elements such boxes and tables (so make sure the font colors contrast against this well, too!)
+Anything else you'd like to add related to style. But remember: simplicity, clarity, and consistency are good things in design.
+Be thoughtful about layout and overall organization of the page.
+Include all of the typical stuff that you'll find on the home page of a business: locations, hours, contact information, some text about how awesome the business is, etc. Be creative, and again, think about what is meaningful to a typical end user.
