Worked on CSS on the bus ride home

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/style.css" type="text">
-    <title>cookie-stand</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    <title>Famous Pat's Salmon Cookies</title>
   </head>
   <body>
     <h1>Famous Pat's Salmon Cookies</h1>
