--- a/sales.html
+++ b/sales.html
@@ -6,7 +6,10 @@
   </head>
   <body>
 <h1>Summary of Cookies Needed per Store, per Hour.</h1>
-    <ul id="storeList1">
+  <section id='SalesReport'>
+
+
+    <!-- <ul id="storeList1">
       <li id="storeLocation1"></li>
       <li id="TotalsNum1"></li>
     </ul>
@@ -25,7 +28,8 @@
     <ul id="storeList5">
       <li id="storeLocation5"></li>
       <li id="Totals5"></li>
-    </ul>
+    </ul> -->
+</section>
   </body>
   <script src="app.js" type="text/javascript" >
   </script>
