--- a/sales.html
+++ b/sales.html
@@ -6,8 +6,11 @@
   </head>
   <body>
 <h1>Summary of Cookies Needed per Store, per Hour.</h1>
-  <section id='SalesReport'>
+<section id='tableArea'>
+
 </section>
+  <table id='SalesReport'>
+</table>
   </body>
   <script src="app.js" type="text/javascript" >
   </script>
