--- a/sales.html
+++ b/sales.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+      <link rel="stylesheet" href="Sales.css">
     <title></title>
   </head>
   <body>
