--- a/sales.html
+++ b/sales.html
@@ -12,7 +12,45 @@
 </section>
   <table id='SalesReport'>
 </table>
+
+<form id="theForm">
+      <table>
+        <tr>
+          <td><label for="store">New Store: </label></td>
+          <td><input type="text" name="store" class="field" placeholder="Name of New Location" required id="locale"/></td>
+        </tr>
+        <tr>
+          <td><label for="minCust">Min. Hourly Customers: </label></td>
+          <td><input type="text" name="minCust" class="field" placeholder="Min. Hourly Customers" required id="minimum" /></td>
+        </tr>
+        <tr>
+          <td><label for="maxCust">Max. Hourly Customers: </label></td>
+          <td><input type="text" name="maxCust" class="field" placeholder="Max. Hourly Customers" required id="maximum"/></td>
+        </tr>
+        <tr>
+          <td><label for="avgCookieSales">Avg. Cookies per Sale: </label></td>
+          <td><input type="text" name="avgCookieSales" class="field" placeholder="Avg. Cookies per Sale" required id="maximum"/></td>
+        </tr>
+        <!--
+        If you want a number field
+        <input type="number" name="" step="0.1"> -->
+        <tr>
+          <td><label for="postBody">Post Body: </label></td>
+          <td>
+            <textarea name="postBody" class="field-body" placeholder="Write your post here"></textarea>
+          </td>
+        </tr>
+        <tr>
+          <td></td>
+          <td style="text-align: right;">
+            <input type="submit" value="Add a New Post!" id="submit" />
+          </td>
+        </tr>
+      </table>
+    </form>
+
   </body>
   <script src="app.js" type="text/javascript" >
   </script>
+
 </html>
