working on editing Event JS

--- a/sales.html
+++ b/sales.html
@@ -12,38 +12,32 @@
 </section>
   <table id='SalesReport'>
 </table>
-
+<hr>
 <form id="theForm">
       <table>
         <tr>
-          <td><label for="store">New Store: </label></td>
-          <td><input type="text" name="store" class="field" placeholder="Name of New Location" required id="locale"/></td>
+          <td><label for="newStore">New Store: </label></td>
+          <td><input type="text" name="newStore" class="field" placeholder="Name of New Location" required id="locale"/></td>
         </tr>
         <tr>
-          <td><label for="minCust">Min. Hourly Customers: </label></td>
-          <td><input type="text" name="minCust" class="field" placeholder="Min. Hourly Customers" required id="minimum" /></td>
+          <td><label for="newMinCust">Min. Hourly Customers: </label></td>
+          <td><input type="text" name="newMinCust" class="field" placeholder="Min. Hourly Customers" required id="minimum" /></td>
         </tr>
         <tr>
-          <td><label for="maxCust">Max. Hourly Customers: </label></td>
-          <td><input type="text" name="maxCust" class="field" placeholder="Max. Hourly Customers" required id="maximum"/></td>
+          <td><label for="newMaxCust">Max. Hourly Customers: </label></td>
+          <td><input type="text" name="newMaxCust" class="field" placeholder="Max. Hourly Customers" required id="maximum"/></td>
         </tr>
         <tr>
-          <td><label for="avgCookieSales">Avg. Cookies per Sale: </label></td>
-          <td><input type="text" name="avgCookieSales" class="field" placeholder="Avg. Cookies per Sale" required id="maximum"/></td>
+          <td><label for="newAvgCookieSales">Avg. Cookies per Sale: </label></td>
+          <td><input type="text" name="newAvgCookieSales" class="field" placeholder="Avg. Cookies per Sale" required id="maximum"/></td>
         </tr>
         <!--
         If you want a number field
         <input type="number" name="" step="0.1"> -->
         <tr>
-          <td><label for="postBody">Post Body: </label></td>
-          <td>
-            <textarea name="postBody" class="field-body" placeholder="Write your post here"></textarea>
-          </td>
-        </tr>
-        <tr>
           <td></td>
           <td style="text-align: right;">
-            <input type="submit" value="Add a New Post!" id="submit" />
+            <input type="submit" value="Add a New Store!" id="submit" />
           </td>
         </tr>
       </table>
