--- a/sales.html
+++ b/sales.html
@@ -13,27 +13,26 @@
   <table id='SalesReport'>
 </table>
 <hr>
+
 <form id="theForm">
       <table>
         <tr>
           <td><label for="newStore">New Store: </label></td>
-          <td><input type="text" name="newStore" class="field" placeholder="Name of New Location" required id="locale"/></td>
+          <td><input type="text" name="newStore" class="field" placeholder="Name of New Location" required/></td>
         </tr>
         <tr>
           <td><label for="newMinCust">Min. Hourly Customers: </label></td>
-          <td><input type="text" name="newMinCust" class="field" placeholder="Min. Hourly Customers" required id="minimum" /></td>
+          <td><input type="text" name="newMinCust" class="field" placeholder="Min. Hourly Customers" required/></td>
         </tr>
         <tr>
           <td><label for="newMaxCust">Max. Hourly Customers: </label></td>
-          <td><input type="text" name="newMaxCust" class="field" placeholder="Max. Hourly Customers" required id="maximum"/></td>
+          <td><input type="text" name="newMaxCust" class="field" placeholder="Max. Hourly Customers" required/></td>
         </tr>
         <tr>
           <td><label for="newAvgCookieSales">Avg. Cookies per Sale: </label></td>
-          <td><input type="text" name="newAvgCookieSales" class="field" placeholder="Avg. Cookies per Sale" required id="maximum"/></td>
+          <td><input type="text" name="newAvgCookieSales" class="field" placeholder="Avg. Cookies per Sale" required/></td>
         </tr>
-        <!--
-        If you want a number field
-        <input type="number" name="" step="0.1"> -->
+
         <tr>
           <td></td>
           <td style="text-align: right;">
