--- a/sales.html
+++ b/sales.html
@@ -22,15 +22,15 @@
         </tr>
         <tr>
           <td><label for="newMinCust">Min. Hourly Customers: </label></td>
-          <td><input type="text" name="newMinCust" class="field" placeholder="Min. Hourly Customers" required/></td>
+          <td><input type="number" name="newMinCust" class="field" placeholder="Min. Hourly Customers" required/></td>
         </tr>
         <tr>
           <td><label for="newMaxCust">Max. Hourly Customers: </label></td>
-          <td><input type="text" name="newMaxCust" class="field" placeholder="Max. Hourly Customers" required/></td>
+          <td><input type="number" name="newMaxCust" class="field" placeholder="Max. Hourly Customers" required/></td>
         </tr>
         <tr>
           <td><label for="newAvgCookieSales">Avg. Cookies per Sale: </label></td>
-          <td><input type="text" name="newAvgCookieSales" class="field" placeholder="Avg. Cookies per Sale" required/></td>
+          <td><input type="number" name="newAvgCookieSales" class="field" placeholder="Avg. Cookies per Sale" required step="0.1"/></td>
         </tr>
 
         <tr>
