--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
   <body>
     <h1>Famous Pat's Salmon Cookies</h1>
     <img id = "logo" src="salmon.png" alt="Salmon Cookie Logo">
-
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<ul>
+  <li><a href="#">Our Story</a></li>
+  <li><a href="#">Our Locations</a></li>
+  <li><a href="#">Our Crew</a></li>
+  <li><a href="#">Our Community</a></li>
+  <li><a href="#">Our Gear</a></li>  
+</ul>
+      <p>Are you suggesting coconuts migrate? That's what being a Protestant's all about. That's why it's the church for me. That's why it's the church for anyone who respects the individual and the individual's right to decide for him or herself. When Martin Luther nailed his protest up to the church door in fifteen-seventeen, he may not have realised the full significance of what he was doing, but four hundred years later, thanks to him, my dear, I can wear whatever I want on my John Thomas...
+      I told you to lay off the beans, you whore! I will not have my fwends widiculed by the common soldiewy. Anybody else feel like a little... giggle... when I mention my fwiend... Biggus... Dickus?
+      Ah, I see you have the machine that goes ping. This is my favorite. You see we lease it back from the company we sold it to and that way it comes under the monthly current budget and not the capital account..</p>
     <h2>What's This Cookie All About?</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>The Lady of the Lake, her arm clad in the purest shimmering samite held aloft Excalibur from the bosom of the water, signifying by divine providence that I, Arthur, was to carry Excalibur. THAT is why I am your king.
+      You don't frighten us, English pig dogs. Go and boil your bottoms, you sons of a silly person. I blow my nose at you, so-called "Arthur King," you and all your silly English K-nig-hts.
+      Come and see the violence inherent in the system. Help! Help! I'm being repressed! Are you suggesting coconuts migrate? Oh, oh, I see! Running away, eh? You yellow bastards! Come back here and take what's coming to you! I'll bite your legs off!</p>
     <ul>Pat's Other Famous Items Now Available</ul>
       <li>Salmon Pretzels</li>
       <li>Salmon Ice Cream</li>
