--- a/index.html
+++ b/index.html
@@ -16,26 +16,28 @@
   <li id = "Community"><a href="#">Our Community</a></li>
   <li><a href="#">Our Gear</a></li>
 </ul>
-  <div class="article">
+  <div id = "enjoy" class="article">
     <h2>Enjoy a Cookie Today</h2>
     <img id = "chinook" src="chinook.jpg" alt="Chinook Salmon">
-      <p>Are you suggesting coconuts migrate? That's what being a Protestant's all about. That's why it's the church for me. That's why it's the church for anyone who respects the individual and the individual's right to decide for him or herself. When Martin Luther nailed his protest up to the church door in fifteen-seventeen, he may not have realised the full significance of what he was doing, but four hundred years later, thanks to him, my dear, I can wear whatever I want on my John Thomas...
-      I told you to lay off the beans, you whore! I will not have my fwends widiculed by the common soldiewy. Anybody else feel like a little... giggle... when I mention my fwiend... Biggus... Dickus?
-      Ah, I see you have the machine that goes ping. This is my favorite. You see we lease it back from the company we sold it to and that way it comes under the monthly current budget and not the capital account..</p>
+      <p>Famous Pat's Salmon Cookies can be enjoyed all over town, with new locations openning soon. These delicatble delicacies have beeen a Seattle Tourist must-buy since 2014.</p>
   </div>
-  <div class="article">
+  <div id = "story" class="article">
     <h2>What's This Cookie All About?</h2>
-    <img src="fish.jpg" alt="Fish">
-      <p>The Lady of the Lake, her arm clad in the purest shimmering samite held aloft Excalibur from the bosom of the water, signifying by divine providence that I, Arthur, was to carry Excalibur. THAT is why I am your king.
-      You don't frighten us, English pig dogs. Go and boil your bottoms, you sons of a silly person. I blow my nose at you, so-called "Arthur King," you and all your silly English K-nig-hts.
-      Come and see the violence inherent in the system. Help! Help! I'm being repressed! Are you suggesting coconuts migrate? Oh, oh, I see! Running away, eh? You yellow bastards! Come back here and take what's coming to you! I'll bite your legs off!</p>
+    <img id = "fourFish" src="fish.jpg" alt="Fish">
+      <p>Pat's Famous Salmon Cookies are a well-known Seattle tradition since 2014. And soon to be reknown world-wide. We use a trademarked method of grinding dry smoked-salmon down into infintesable amounts and mix it with some of the Pacific Northwest's finest ingredients to blend together the finest cookie ever produced. When enjoyed with some of the finest coffee selection known to man, Famous Pat's Salmon cookies are the most delicious treat imaginable.</p>
   </div>
+  <div id = "gear" class="article">
+    <h2>Check out our Latest Gear</h2>
+      <img id = "shirt" src="shirt.jpg" alt="Salmon Shirt">
+      <img id = "cutter" src="cutter.jpeg" alt="Cookie Cutter">
+      <p>Shirts, mugs, magnets, keychains and more. We've got it all here for you. Need a gift for loved ones back home? Beautiful blown-glass Salmon Cookie figures might be for you. Need something a little less classy for the office clown? Check out our singing fish collection. WE've got something fo reveryone here.</p>
+  </div id = "menu">
     <ul>Pat's Other Famous Items Now Available</ul>
       <li>Salmon Pretzels</li>
       <li>Salmon Ice Cream</li>
       <li>Salmon Yougurt</li>
       <li>Salmon Pie!</li>
-      <!-- <div class="article"> -->
+      <br>
     <aside>Famous Pat's Location
       <p>1st & Pike</p>
       <p>Capitol Hill</p>
@@ -43,11 +45,9 @@
       <p>Akli</p>
       <p>SeaTac Airport</p>
     </aside>
-    <!-- </div> -->
-      <img src="cutter.jpeg" alt="Cookie Cutter">
-      <img src="family.jpg" alt="Family">
+      <img id = "family" src="family.jpg" alt="Family">
       <img src="frosted-cookie.jpg" alt="Frosted Salmon Cookie">
-      <img src="shirt.jpg" alt="Salmon Shirt">
+
     <hr>
     <footer>Famous Pat's Salmon cookies
       2901 3rd Avenue
