--- a/sales.html
+++ b/sales.html
@@ -6,16 +6,15 @@
     <title></title>
   </head>
   <body>
-<h1>Summary of Cookies Needed per Store, per Hour.</h1>
+<h1>Summary of Cookies Sales</h1>
+<img id = "logo" src="salmon.png" alt="Salmon">
 <section id='tableArea'>
-
 </section>
   <table id='SalesReport'>
 </table>
 <hr>
-
 <form id="theForm">
-      <table>
+      <table id="theFormTable">
         <tr>
           <td><label for="newStore">New Store: </label></td>
           <td><input type="text" name="newStore" class="field" placeholder="Name of New Location" required/></td>
@@ -32,7 +31,6 @@
           <td><label for="newAvgCookieSales">Avg. Cookies per Sale: </label></td>
           <td><input type="number" name="newAvgCookieSales" class="field" placeholder="Avg. Cookies per Sale" required step="0.1"/></td>
         </tr>
-
         <tr>
           <td></td>
           <td style="text-align: right;">
@@ -41,9 +39,7 @@
         </tr>
       </table>
     </form>
-
   </body>
   <script src="app.js" type="text/javascript" >
   </script>
-
 </html>
