added new articles

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div id = "enjoy" class="article">
     <h2>Enjoy a Cookie Today</h2>
     <img id = "chinook" src="chinook.jpg" alt="Chinook Salmon">
-      <p>Famous Pat's Salmon Cookies can be enjoyed all over town, with new locations openning soon. These delicatble delicacies have beeen a Seattle Tourist must-buy since 2014.</p>
+      <p>Famous Pat's Salmon Cookies can be enjoyed all over town, with new locations openning soon. These delicatble delicacies have beeen a Seattle Tourist must-buy since 2014. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </div>
   <div id = "story" class="article">
     <h2>What's This Cookie All About?</h2>
@@ -31,24 +31,36 @@
       <img id = "shirt" src="shirt.jpg" alt="Salmon Shirt">
       <img id = "cutter" src="cutter.jpeg" alt="Cookie Cutter">
       <p>Shirts, mugs, magnets, keychains and more. We've got it all here for you. Need a gift for loved ones back home? Beautiful blown-glass Salmon Cookie figures might be for you. Need something a little less classy for the office clown? Check out our singing fish collection. WE've got something fo reveryone here.</p>
-  </div id = "menu">
-    <ul>Pat's Other Famous Items Now Available</ul>
-      <li>Salmon Pretzels</li>
-      <li>Salmon Ice Cream</li>
-      <li>Salmon Yougurt</li>
-      <li>Salmon Pie!</li>
-      <br>
+  </div>
+  <div id = "menu" class="article">
+    <h2>Pat's Other Famous Items Now Available</h2>
+    <img src="frosted-cookie.jpg" alt="Frosted Salmon Cookie">
+      <p>Salmon Pretzels</p>
+      <p>Salmon Ice Cream</p>
+      <p>Salmon Yougurt</p>
+      <p>Salmon Pie!</p>
+  </div>
+  <div id = "locations" class="article">
     <aside>Famous Pat's Location
       <p>1st & Pike</p>
       <p>Capitol Hill</p>
       <p>Seattle Center</p>
       <p>Akli</p>
       <p>SeaTac Airport</p>
-    </aside>
+      <p>Enjoy some with your family today!</p>
       <img id = "family" src="family.jpg" alt="Family">
-      <img src="frosted-cookie.jpg" alt="Frosted Salmon Cookie">
-
-    <hr>
+    </aside>
+  </div>
+    <!-- <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <hr> -->
     <footer>Famous Pat's Salmon cookies
       2901 3rd Avenue
       Seattle WA 98001
