Fixed Nav bar issue

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Famous Pat's Salmon Cookies</h1>
     <img id = "logo" src="salmon.png" alt="Salmon Cookie Logo">
 <ul id = "navBar">
-  <li id = "story"><a href="#">Our Story</a></li>
+  <li id = "ourStory"><a href="#">Our Story</a></li>
   <li id = "Locations"><a href="#">Our Locations</a></li>
   <li id = "Family"><a href="#">Our Family</a></li>
   <li id = "Community"><a href="#">Our Community</a></li>
