--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <p>Salmon Pie!</p>
   </div>
   <div id = "locations" class="article">
-    <aside>Famous Pat's Location
+    <h2>Famous Pat's Location</h2>
       <p>1st & Pike</p>
       <p>Capitol Hill</p>
       <p>Seattle Center</p>
@@ -49,18 +49,8 @@
       <p>SeaTac Airport</p>
       <p>Enjoy some with your family today!</p>
       <img id = "family" src="family.jpg" alt="Family">
-    </aside>
   </div>
-    <!-- <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <hr> -->
+    <hr>
     <footer>Famous Pat's Salmon cookies
       2901 3rd Avenue
       Seattle WA 98001
